sliders no longer jump back to their default value for a fraction of a second when reloading the page any longer. they are hidden until the page loads

--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,7 @@ textarea {
 #audioPlayer {
     width: 100%;
 }
+
+.sliders-loading {
+    visibility: hidden;
+}
